Minor improvements and jetton preview

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 VITE_CLAIM_API_ENDPOINT=https://demo-airdrop.tonapi.io
 VITE_CLAIM_UUID=1f94c970-4b76-42b8-8372-5ec11029d8e1
+VITE_CLAIM_TOKEN_ADDRESS=kQDwtcw5m6PZBV6DmUTDrjgk1dW0neG1nEXyFhqNW81_CHn9
+VITE_TONAPI_ENDPOINT=https://testnet.tonapi.io
