--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ton-api/client": "^0.2.0-beta.1",
+    "@ton-api/client": "^0.3.1",
     "@ton-api/ton-adapter": "^0.2.0-beta.1",
     "@ton/core": "^0.59.0",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "^15.1.0",
     "@tonconnect/ui-react": "^2.0.9",
+    "bignumber.js": "^9.1.2",
     "canvas-confetti": "^1.9.3",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
