--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_CLAIM_API_ENDPOINT=https://demo-airdrop.tonapi.io
-VITE_CLAIM_UUID=1f94c970-4b76-42b8-8372-5ec11029d8e1
-VITE_CLAIM_TOKEN_ADDRESS=kQDwtcw5m6PZBV6DmUTDrjgk1dW0neG1nEXyFhqNW81_CHn9
-VITE_TONAPI_ENDPOINT=https://testnet.tonapi.io
+VITE_CLAIM_API_ENDPOINT=https://mainnet-airdrop.tonapi.io
+# VITE_CLAIM_UUID=9a867259-3c6c-46c0-b933-e5e0a1750184
+# VITE_CLAIM_TOKEN_ADDRESS=EQDrb66XvlfvTeusxOa-o6K452-Qi5VTQPHegLgKvAq6piaX
+VITE_TONAPI_ENDPOINT=https://tonapi.io
