--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-VITE_CLAIM_API_ENDPOINT=https://mainnet-airdrop.tonapi.io
+VITE_CLAIM_API_ENDPOINT=https://testnet-airdrop.tonapi.io
 # VITE_CLAIM_UUID=9a867259-3c6c-46c0-b933-e5e0a1750184
-# VITE_CLAIM_TOKEN_ADDRESS=EQDrb66XvlfvTeusxOa-o6K452-Qi5VTQPHegLgKvAq6piaX
-VITE_TONAPI_ENDPOINT=https://tonapi.io
+VITE_TONAPI_ENDPOINT=https://testnet.tonapi.io
