--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,5 @@
 {
   "url": "https://claim-dapp.tonkeeper.com",
-  "name": "Claim dApp"
+  "name": "Airdrop Claim dApp",
+  "iconUrl": "https://tonapi.io/favicon-32x32.png"
 }
