--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ton-api/client": "^0.3.1",
+    "@ton-api/client": "^0.4.0",
     "@ton/core": "^0.60.1",
     "@ton/crypto": "^3.3.0",
-    "@ton/ton": "^15.1.0",
-    "@tonconnect/ui-react": "^2.0.11",
+    "@ton/ton": "^15.2.1",
+    "@tonconnect/ui-react": "2.1.0",
     "canvas-confetti": "^1.9.3",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
