--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-# VITE_AIRDROP_UUID=9a867259-3c6c-46c0-b933-e5e0a1750184
-# VITE_AIRDROP_JETTON=EQCxE6mUtQJKFnGfaROTKOt1lZbDiiX1kCixRv7Nw2Id_sDs
+VITE_AIRDROP_UUID=4bf5618a-5331-4722-9a3b-d5321d197744
+VITE_AIRDROP_JETTON=EQC9DbBKEi6gbzn85XENDDTlu9mWRLMB8cBlm31F80c0dvba
